--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
             ./env_setup.sh
             echo "does it grab it?"
             echo $(key)
-            echo ${{ variables.var }}
+            echo ${{ variables.key }}
             echo $[variables.key]
             echo "maybe?"
             echo $TF_VAR_key
