--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-  - stage: plan-sbx
+  - stage: plan_sbx
     variables:
       - group: kv-azure-tf-demo-sbx
     jobs:
@@ -55,7 +55,7 @@ stages:
           TF_VAR_env: sbx
       - publish: $(System.DefaultWorkingDirectory)/theplansbx
         artifact: theplan
-  - stage: apply-sbx
+  - stage: apply_sbx
     variables:
       - group: kv-azure-tf-demo-sbx
     jobs:
@@ -108,7 +108,7 @@ stages:
               TF_VAR_resource_group_name: $(resource-group-name)
               TF_VAR_key: $(key)
               TF_VAR_container_name: $(container-name)
-  - stage: plan-prod
+  - stage: plan_prod
     variables:
       - group: kv-azure-tf-demo-prod
     jobs:
@@ -158,7 +158,7 @@ stages:
           TF_VAR_env: prod
       - publish: $(System.DefaultWorkingDirectory)/theplanprod
         artifact: theplan
-  - stage: apply-prod
+  - stage: apply_prod
     variables:
       - group: kv-azure-tf-demo-prod
     jobs:
